error
  File "kafka/kafka_producer.py", line 15
    message = f'{timestamp} - {log_level} - Sample log message'
                                                              ^
SyntaxError: invalid syntax
